--- a/日本語.md
+++ b/日本語.md
@@ -3,6 +3,9 @@
 * https://www.w3.org/WAI/translations/#japanese
 * https://equalentry.com/people-with-disabilities-in-japanese/
 
+## (Tools)
+* https://www.deque.com/axe/ - Axe Core includes support
+
 ## (Introduction Videos)
 * 
 
